# TonicTroubleFix

./: .gitignore  .gitmodules  3RD_PARTY.md  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg.json
installer/: FindDisc.iss  ScriptAddons.iss  license.rtf
installer/files/: Xidi.ini
src/config-cpp/: DialogApp.cpp  DialogApp.h  DirectX.cpp  DirectX.h  IniFile.cpp  IniFile.h  Main.cpp  MyDialog.cpp  MyDialog.h  PerMonitorV2.manifest  Resource.rc  StdAfx.cpp  pch.h  resource.h
src/module/: Init.cpp  Main.cpp  pch.h
